crates/plotnik-tests/tests/04-emit/bytecode/binding/unknown_field_with_suggestion.txt
Q = (function_declaration
  nme: (identifier) @name
) @fn
------------------ DIAGNOSTICS -------------------
error: `nme` is not a valid grammar field
 --> query.ptk:2:3
  |
2 |   nme: (identifier) @name
  |   ^^^
  |
help: replace with `name`
  |
2 |   name: (identifier) @name
  |    +
